Make message box scroll to prevent overflow

--- a/style.css
+++ b/style.css
@@ -34,8 +34,9 @@ body {
 .results {
   border: 1px solid black;
   border-radius: 5px;
-  min-height: 50px;
+  height: 90px;
   padding-left: 20px;
+  overflow-y: auto;
 }
 
 button {
